Fix fonts being stuck on opacity: 1 because of TypeKit styles.

--- a/src/typography/styles.scss
+++ b/src/typography/styles.scss
@@ -79,8 +79,4 @@
   .wf-loading & {
     opacity: 0;
   }
-
-  .wf-active & {
-    opacity: 1;
-  }
 }
